# ipc

./: .gitignore  CMakeLists.txt  README.md  generate.ps1
.cmake/: common.cmake
src/: CMakeLists.txt
src/boost/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
src/common/: CMakeLists.txt  Window.cpp  Window.h  WindowListener.h
src/host/: CMakeLists.txt  Host.cpp  Host.h  main.cpp
